--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,14 +1,9 @@
 name: Generate Snake Animation
 
 on:
-  # Run automatically every 24 hours
   schedule:
     - cron: "0 0 * * *" 
-  
-  # Allows you to manually run the job at any time
   workflow_dispatch:
-  
-  # Run on every push on the main branch
   push:
     branches:
     - main
@@ -16,11 +11,12 @@ on:
     
 jobs:
   generate:
+    permissions: 
+      contents: write # THIS IS THE MAGIC LINE TO FIX THE ERROR
     runs-on: ubuntu-latest
     timeout-minutes: 10
     
     steps:
-      # Generates a snake game from a github user contributions graph
       - name: Generate github-contribution-grid-snake.svg
         uses: Platane/snk/svg-only@v3
         with:
@@ -31,7 +27,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
-      # Push the SVG to an "output" branch
       - name: Push github-contribution-grid-snake.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
